infra/k8s/superconscious/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superconscious
spec:
  selector:
    app: superconscious
  ports:
  - name: http
    port: 8740
    targetPort: 8740
